try to fix mobile spacing 5, got it

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -550,9 +550,9 @@ ol .playing a, .playing{
 }
 
 .slick-prev {
-  left: -15px;
+  left: -15px !important;
 }
 
 .slick-next {
-  right: -15px;
+  right: -15px !important;
 }
